# FrappeAK

./: .gitignore  CLAUDE.md  README.md  bench.md  boonstyle.md  frappeguide.md  install_frappe_production.sh  package.json  pyproject.toml  setup.py  themeupdateguide.md
UIDesign/: boon-frappe-theme-design.md  (+1 more)
akcom/: README.md  pyproject.toml  setup.py
akcom/akcom/: hooks.py  modules.txt
akcom/akcom/akcom/doctype/akcom_person/: akcom_person.py  test_akcom_person.py
akcom/akcom/workspace/akcom/: akcom.json
doc_designer_ak/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
doc_designer_ak/doc_designer_ak/: api.py  email_utils.py  hooks.py  modules.txt  renderer.py  tasks.py  template_helpers.py
doc_designer_ak/doc_designer_ak/doc_designer_ak/doctype/ak_document_response/: ak_document_response.json  ak_document_response.py
doc_designer_ak/doc_designer_ak/doc_designer_ak/doctype/ak_document_settings/: ak_document_settings.py
doc_designer_ak/doc_designer_ak/fixtures/: sample_templates.json
doc_designer_ak/doc_designer_ak/public/css/: document_styles.css
doc_designer_ak/doc_designer_ak/public/js/: share_button.bundle.js  shared_form.js
doc_designer_ak/doc_designer_ak/templates/examples/: quotation.html
doc_designer_ak/doc_designer_ak/templates/includes/: shared_base.html
doc_designer_ak/doc_designer_ak/workspace/doc_designer_ak/: doc_designer_ak.json
doc_designer_ak/doc_designer_ak/www/: shared.html  shared.py
doc_designer_ak/docs/: EXAMPLES.md  FIELD_TYPES.md  HELPER_FUNCTIONS.md  LAYOUT_REFERENCE.md  TEMPLATE_GUIDE.md
(+107 files in other folders)
