[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "automation_ak"
authors = [
    { name = "AK" }
]
description = "Visual automation/workflow builder for Frappe Framework"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "requests",
]

[project.optional-dependencies]
twilio = ["twilio"]
