[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "akcom"
authors = [
    { name = "AK" }
]
description = "AKCOM — Private support ledger and billing tracker"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = []
