[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doc_designer_ak"
authors = [
    { name = "AK" }
]
description = "Document Designer + Interactive Sharing for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = []
